--- a/AppLib/AppLib.csproj
+++ b/AppLib/AppLib.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQliteDataAccess.cs" />
     <Compile Include="TasksModel.cs" />
+    <Compile Include="TasksSetModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
