--- a/TaskSetUnitTest/TaskModelUnitTest.csproj
+++ b/TaskSetUnitTest/TaskModelUnitTest.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="TaskSetTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TasksModelTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
