--- a/AppUI/packages.config
+++ b/AppUI/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Dapper" version="1.50.5" targetFramework="net461" />
   <package id="PresentationFramework" version="4.6.0" targetFramework="net461" />
+  <package id="System.Data.SqlClient" version="4.6.0" targetFramework="net461" />
   <package id="System.Data.SQLite.Core" version="1.0.109.2" targetFramework="net461" />
 </packages>
