Fixed unit tests. Added app.config to test project to make loadconnectionstring method working for unit testing.

--- a/TaskSetUnitTest/TaskModelUnitTest.csproj
+++ b/TaskSetUnitTest/TaskModelUnitTest.csproj
@@ -59,6 +59,7 @@
     <Compile Include="SQLiteConnectionTest.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
