--- a/AppLib/AppLib.csproj
+++ b/AppLib/AppLib.csproj
@@ -66,6 +66,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="PolishVoiceHandling\MSSpeech_TTS_pl-PL_Paulina.msi" />
+    <None Include="PolishVoiceHandling\SpeechPlatformRuntime.msi" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.109.2\build\net46\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.109.2\build\net46\System.Data.SQLite.Core.targets')" />
