--- a/AppLib/packages.config
+++ b/AppLib/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Dapper" version="1.50.5" targetFramework="net461" />
+  <package id="docfx.console" version="2.40.10" targetFramework="net461" developmentDependency="true" />
   <package id="Mono.Data.Sqlite" version="1.0.61" targetFramework="net461" />
   <package id="System.Data.SqlClient" version="4.6.0" targetFramework="net461" />
   <package id="System.Data.SQLite.Core" version="1.0.109.2" targetFramework="net461" />
