--- a/AppLib/AppLib.csproj
+++ b/AppLib/AppLib.csproj
@@ -77,6 +77,37 @@
     <None Include="PolishVoiceHandling\MSSpeech_TTS_pl-PL_Paulina.msi" />
     <None Include="PolishVoiceHandling\SpeechPlatformRuntime.msi" />
     <None Include="toc.yml" />
+    <None Include="_site\fonts\glyphicons-halflings-regular.eot" />
+    <None Include="_site\fonts\glyphicons-halflings-regular.ttf" />
+    <None Include="_site\fonts\glyphicons-halflings-regular.woff" />
+    <None Include="_site\fonts\glyphicons-halflings-regular.woff2" />
+    <None Include="_site\manifest.json" />
+    <None Include="_site\search-stopwords.json" />
+    <None Include="_site\xrefmap.yml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="_site\api\AppLib.html" />
+    <Content Include="_site\api\AppLib.SqliteDataAccess.html" />
+    <Content Include="_site\api\AppLib.TaskSet.html" />
+    <Content Include="_site\api\AppLib.TasksModel.html" />
+    <Content Include="_site\api\index.html" />
+    <Content Include="_site\api\toc.html" />
+    <Content Include="_site\articles\intro.html" />
+    <Content Include="_site\articles\toc.html" />
+    <Content Include="_site\favicon.ico" />
+    <Content Include="_site\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="_site\index.html" />
+    <Content Include="_site\logo.svg" />
+    <Content Include="_site\styles\docfx.css" />
+    <Content Include="_site\styles\docfx.js" />
+    <Content Include="_site\styles\docfx.vendor.css" />
+    <Content Include="_site\styles\docfx.vendor.js" />
+    <Content Include="_site\styles\lunr.js" />
+    <Content Include="_site\styles\lunr.min.js" />
+    <Content Include="_site\styles\main.css" />
+    <Content Include="_site\styles\main.js" />
+    <Content Include="_site\styles\search-worker.js" />
+    <Content Include="_site\toc.html" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.109.2\build\net46\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.109.2\build\net46\System.Data.SQLite.Core.targets')" />
