--- a/AppLib/AppLib.csproj
+++ b/AppLib/AppLib.csproj
@@ -66,8 +66,6 @@
     <Compile Include="TasksModel.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include=".gitignore" />
-    <None Include="api\.gitignore" />
     <None Include="api\index.md" />
     <None Include="articles\intro.md" />
     <None Include="articles\toc.md" />
@@ -77,6 +75,10 @@
     <None Include="PolishVoiceHandling\MSSpeech_TTS_pl-PL_Paulina.msi" />
     <None Include="PolishVoiceHandling\SpeechPlatformRuntime.msi" />
     <None Include="toc.yml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include=".gitignore" />
+    <Content Include="api\.gitignore" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.109.2\build\net46\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.109.2\build\net46\System.Data.SQLite.Core.targets')" />
